overflow fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,7 +17,7 @@
   align-items: left;
   flex-direction: column;
   padding: 20px;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 .h2 { 
